[gd_scene load_steps=81 format=3 uid="uid://cmpivi8iilp2a"]

[ext_resource type="Texture2D" uid="uid://bj67swnbxmy3w" path="res://Skeleton/Sprite Sheets/Skeleton Idle.png" id="1_0g3fv"]
[ext_resource type="Script" path="res://scripts/skeleenemy.gd" id="1_dp2ur"]
[ext_resource type="Texture2D" uid="uid://5clgxgje82fw" path="res://Skeleton/Sprite Sheets/Skeleton Attack.png" id="1_w8xg3"]
[ext_resource type="Texture2D" uid="uid://bax3vjqxpfane" path="res://Skeleton/Sprite Sheets/Skeleton Walk.png" id="3_48qlt"]
[ext_resource type="Texture2D" uid="uid://3wen02l680l0" path="res://Skeleton/Sprite Sheets/Skeleton Dead.png" id="3_li88h"]
[ext_resource type="Script" path="res://scripts/detection area.gd" id="6_teeik"]
[ext_resource type="PackedScene" uid="uid://o02xkh6ljtbd" path="res://scenes/button.tscn" id="7_c4euk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nqvld"]
atlas = ExtResource("1_w8xg3")
region = Rect2(0, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_neh52"]
atlas = ExtResource("1_w8xg3")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6onk"]
atlas = ExtResource("1_w8xg3")
region = Rect2(86, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfism"]
atlas = ExtResource("1_w8xg3")
region = Rect2(129, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_46eud"]
atlas = ExtResource("1_w8xg3")
region = Rect2(172, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6xq4"]
atlas = ExtResource("1_w8xg3")
region = Rect2(215, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcpoh"]
atlas = ExtResource("1_w8xg3")
region = Rect2(258, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kex57"]
atlas = ExtResource("1_w8xg3")
region = Rect2(301, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdu34"]
atlas = ExtResource("1_w8xg3")
region = Rect2(344, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_827wd"]
atlas = ExtResource("1_w8xg3")
region = Rect2(387, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjtyu"]
atlas = ExtResource("1_w8xg3")
region = Rect2(430, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_oslwi"]
atlas = ExtResource("1_w8xg3")
region = Rect2(473, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcjpg"]
atlas = ExtResource("1_w8xg3")
region = Rect2(516, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwnlp"]
atlas = ExtResource("1_w8xg3")
region = Rect2(559, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ym5s"]
atlas = ExtResource("1_w8xg3")
region = Rect2(602, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv366"]
atlas = ExtResource("1_w8xg3")
region = Rect2(645, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xee11"]
atlas = ExtResource("1_w8xg3")
region = Rect2(688, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1vb6"]
atlas = ExtResource("1_w8xg3")
region = Rect2(731, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsk8p"]
atlas = ExtResource("3_li88h")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm35t"]
atlas = ExtResource("3_li88h")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c67u2"]
atlas = ExtResource("3_li88h")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30hsx"]
atlas = ExtResource("3_li88h")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpvui"]
atlas = ExtResource("3_li88h")
region = Rect2(132, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhvsp"]
atlas = ExtResource("3_li88h")
region = Rect2(165, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnnqs"]
atlas = ExtResource("3_li88h")
region = Rect2(198, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg0oo"]
atlas = ExtResource("3_li88h")
region = Rect2(231, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq18y"]
atlas = ExtResource("3_li88h")
region = Rect2(264, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ave7"]
atlas = ExtResource("3_li88h")
region = Rect2(297, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8wxm"]
atlas = ExtResource("3_li88h")
region = Rect2(330, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxmv3"]
atlas = ExtResource("3_li88h")
region = Rect2(363, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpmci"]
atlas = ExtResource("3_li88h")
region = Rect2(396, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utrle"]
atlas = ExtResource("3_li88h")
region = Rect2(429, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_woy2u"]
atlas = ExtResource("3_li88h")
region = Rect2(462, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d253"]
atlas = ExtResource("1_0g3fv")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsi3n"]
atlas = ExtResource("1_0g3fv")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ediwh"]
atlas = ExtResource("1_0g3fv")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoprl"]
atlas = ExtResource("1_0g3fv")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrejp"]
atlas = ExtResource("1_0g3fv")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_brpdm"]
atlas = ExtResource("1_0g3fv")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aj15"]
atlas = ExtResource("1_0g3fv")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy8cf"]
atlas = ExtResource("1_0g3fv")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2k82"]
atlas = ExtResource("1_0g3fv")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_km23s"]
atlas = ExtResource("1_0g3fv")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udax8"]
atlas = ExtResource("1_0g3fv")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvkyv"]
atlas = ExtResource("3_48qlt")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_p78eq"]
atlas = ExtResource("3_48qlt")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycxyx"]
atlas = ExtResource("3_48qlt")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gayx"]
atlas = ExtResource("3_48qlt")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwqs1"]
atlas = ExtResource("3_48qlt")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_moywm"]
atlas = ExtResource("3_48qlt")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfmx2"]
atlas = ExtResource("3_48qlt")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_c28ms"]
atlas = ExtResource("3_48qlt")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_83jou"]
atlas = ExtResource("3_48qlt")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfmlj"]
atlas = ExtResource("3_48qlt")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bruv"]
atlas = ExtResource("3_48qlt")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6662b"]
atlas = ExtResource("3_48qlt")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_j47w5"]
atlas = ExtResource("3_48qlt")
region = Rect2(264, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_va3rn"]
atlas = ExtResource("3_48qlt")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_d82ru"]
atlas = ExtResource("3_48qlt")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvamv"]
atlas = ExtResource("3_48qlt")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk8jw"]
atlas = ExtResource("3_48qlt")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu78b"]
atlas = ExtResource("3_48qlt")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4mq0"]
atlas = ExtResource("3_48qlt")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0tut"]
atlas = ExtResource("3_48qlt")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqfjc"]
atlas = ExtResource("3_48qlt")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvfqj"]
atlas = ExtResource("3_48qlt")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_a28r4"]
atlas = ExtResource("3_48qlt")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_516ev"]
atlas = ExtResource("3_48qlt")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp4le"]
atlas = ExtResource("3_48qlt")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmwha"]
atlas = ExtResource("3_48qlt")
region = Rect2(264, 0, 22, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_xh52o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqvld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neh52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6onk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfism")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46eud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6xq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcpoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kex57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdu34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_827wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjtyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oslwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcjpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwnlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ym5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv366")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xee11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1vb6")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsk8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm35t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c67u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30hsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpvui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhvsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnnqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg0oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq18y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ave7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8wxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxmv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpmci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utrle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woy2u")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d253")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsi3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ediwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoprl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrejp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brpdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aj15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy8cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2k82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km23s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udax8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvkyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p78eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycxyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gayx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwqs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moywm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfmx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c28ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83jou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfmlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bruv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6662b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j47w5")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_va3rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d82ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvamv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk8jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu78b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4mq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0tut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqfjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvfqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a28r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_516ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp4le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmwha")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mn0o8"]
size = Vector2(16.5, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_tuhgx"]
radius = 42.45

[node name="skeleenemy" type="CharacterBody2D"]
script = ExtResource("1_dp2ur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xh52o")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.25, 3)
shape = SubResource("RectangleShape2D_mn0o8")

[node name="detection area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("6_teeik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection area"]
position = Vector2(3, 3)
shape = SubResource("CircleShape2D_tuhgx")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.866
one_shot = true

[node name="Button" parent="." instance=ExtResource("7_c4euk")]
offset_left = -43.0
offset_top = 20.0
offset_right = 52.0
offset_bottom = 51.0

[connection signal="body_entered" from="detection area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
